--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "jss": "^9.8.7",
     "markdown-loader": "^4.0.0",
     "mongoose": "^5.3.12",
+    "mongoose-sequence": "^4.0.1",
     "multer": "^1.4.1",
     "multer-gridfs-storage": "^3.2.3",
     "next": "^7.0.2",
