--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@material-ui/core": "^3.3.1",
     "@material-ui/icons": "^3.0.1",
     "@zeit/next-css": "^1.0.1",
+    "axios": "^0.18.0",
     "babel-core": "^6.26.3",
     "babel-plugin-wrap-in-js": "^1.1.1",
     "body-parser": "^1.18.3",
