--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "ionicons": "^4.2.4",
     "isomorphic-fetch": "^2.2.1",
     "jss": "^9.8.7",
+    "lokijs": "^1.5.5",
     "markdown-loader": "^4.0.0",
     "mongoose": "^5.3.12",
     "mongoose-sequence": "^4.0.1",
