--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "babel-core": "^6.26.3",
     "babel-plugin-wrap-in-js": "^1.1.1",
     "body-parser": "^1.18.3",
+    "cors": "^2.8.5",
     "dotenv": "^6.0.0",
     "express": "^4.16.4",
     "gridfs-stream": "^1.1.1",
