--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "jss": "^9.8.7",
     "lokijs": "^1.5.5",
     "markdown-loader": "^4.0.0",
+    "material-ui-chip-input": "^1.0.0-beta.9",
     "mongoose": "^5.3.12",
     "mongoose-sequence": "^4.0.1",
     "multer": "^1.4.1",
