--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react-icons": "^3.2.2",
     "react-jss": "^8.6.1",
     "react-markdown": "^4.0.3",
+    "react-pdf": "^4.0.0",
     "react-syntax-highlighter": "^8.0.1",
     "react-transition-group": "^2.4.0",
     "sass-loader": "^7.0.3",
